# FinanceStatement

./: .gitignore  README.md  main.py  pyproject.toml
src/: Table.py  TableFactory.py  utils.py
src/bas_create_instance_doc/: generate_audit_information.py  generate_xbrl.py
src/bas_validation/: validate_hello_world.py
src/vba/bas_create_instance_doc/: clear_audit_information.py  initialize_data.py  main.py  main_original.py  populate_spreadsheet.py
src/vba/bas_create_taxonomy/: generate_taxonomy.py
src/vba/bas_validation/: validator.py
tests/test_hello_world/: HelloWorld.xsd  test_hello_world.py
tests/test_hello_world/data/: HelloWorld_no_attrs.xsd  InstanceCreator-HelloWorld-NoDimensions-2013-11-18.xls
tests/test_table/: test_table.py
tests/test_table/cache/: instance
tests/test_table/data/: HelloWorld.xml  simple_xbrl_instance.xml
tests/test_utils/: test_utils.py
