[project]
name = "vba2py-xbrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = [
  "tests/test_hello_world",
  "tests/utils",
]
