[project]
name = "vba2py-xbrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arelle>=2.2",
    "arelle-release>=2.37.50",
    "lxml>=6.0.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
  "tests/test_table"
]
norecursedirs = [
  ".vscode",
  "config",
  "logs",
]
